Add size button, rework related logic

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <button class="sizeButton">Select Size</button>
     <div class="gridBase">
     </div>
 </body>
