Add color mode button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <button class="sizeButton">Select Size</button>
+    <button class="colorModeButton">Color Mode</button>
     <div class="gridBase">
     </div>
 </body>
